use locale for point formatting